--- a/activities/Lecture1-NN-keras.ipynb
+++ b/activities/Lecture1-NN-keras.ipynb
@@ -34,7 +34,7 @@
         "# Neural Networks in TensorFlow's Keras\n",
         "\n",
         "\n",
-        "We will use a dense neural network in Keras to solve a simple regression problem.\n",
+        "We will use a dense neural network in Keras to create a predictive model for a simple task.\n",
         "## Learning Task\n",
         "We will construct a dense neural network to predict the invariant mass of a particle from its energy, momentum, (and charge).\n",
         "\n",
@@ -54,7 +54,7 @@
         " - You are in an active kernel\n",
         " - Run each cell with `Shift + Enter`\n",
         " - You must execute the cells in the order that you want the code to run\n",
-        " - `Runtime`$\\rightarrow$`Change runtime type` allows you to utilize GPUs and TPUs. They are unnecessary here, but will become vital in later exercises.\n"
+        " - If you are on Google's Colab: `Runtime`$\\rightarrow$`Change runtime type` allows you to utilize GPUs and TPUs. They are unnecessary here, but will become vital in later exercises.\n"
       ]
     },
     {
@@ -68,22 +68,65 @@
         "import tensorflow as tf\n",
         "import pylab as plt"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The following cell is only necessary if you are running within Goolge colab. Uncomment all four lines of code (beginning with `!`) before executing."
+      ],
+      "metadata": {
+        "id": "lpYVIfDu-qJ1"
+      }
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xTx3KTNYGyQu"
+        "id": "xTx3KTNYGyQu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29df820a-c9c6-448c-adfa-20d422305fdd"
       },
       "source": [
         "# import data from github. Note: in colab, go to Files and refresh to see file\n",
         "# here I use Linux commands within the notebook to pull the data file and rename it\n",
-        "!wget https://github.com/NuclearTalent/MachineLearningECT/blob/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy?raw=true\n",
-        "!mv homogenous-16-particle-events-energy.npy?raw=true particle-events.npy"
+        "\n",
+        "# !wget https://github.com/NuclearTalent/MachineLearningECT/blob/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy?raw=true\n",
+        "# !mv homogenous-16-particle-events-energy.npy?raw=true particle-events.npy\n",
+        "# !mkdir data\n",
+        "# !mv particle-events.npy data/particle-events.npy"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-12-18 04:18:42--  https://github.com/NuclearTalent/MachineLearningECT/blob/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy?raw=true\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://github.com/NuclearTalent/MachineLearningECT/raw/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy [following]\n",
+            "--2024-12-18 04:18:42--  https://github.com/NuclearTalent/MachineLearningECT/raw/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy\n",
+            "Reusing existing connection to github.com:443.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/NuclearTalent/MachineLearningECT/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy [following]\n",
+            "--2024-12-18 04:18:42--  https://raw.githubusercontent.com/NuclearTalent/MachineLearningECT/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 22986368 (22M) [application/octet-stream]\n",
+            "Saving to: ‘homogenous-16-particle-events-energy.npy?raw=true’\n",
+            "\n",
+            "homogenous-16-parti 100%[===================>]  21.92M  --.-KB/s    in 0.1s    \n",
+            "\n",
+            "2024-12-18 04:18:44 (201 MB/s) - ‘homogenous-16-particle-events-energy.npy?raw=true’ saved [22986368/22986368]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -92,9 +135,9 @@
       },
       "source": [
         "# now we load the data file, which is a numpy array\n",
-        "events = np.load(\"particle-events.npy\")"
+        "events = np.load(\"data/particle-events.npy\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
