--- a/activities/Lecture1-NN-keras.ipynb
+++ b/activities/Lecture1-NN-keras.ipynb
@@ -154,7 +154,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "067guDXZDk4A"
+        "id": "067guDXZDk4A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f773a2af-579d-4860-f49d-0dd608c3351d"
       },
       "source": [
         "# Here we rearrange the data within each of the events to isolate particles\n",
@@ -166,12 +170,31 @@
         "\n",
         "# Use another call of reshape to combine all events to have the appropriate shape\n",
         "# Complete me:\n",
-        "particles =\n",
+        "particles = np.reshape(evt_particles,(len(events)*16,5))\n",
         "\n",
-        "#print(\"\\nparticles =\\n\",particles[:10])"
+        "print(\"\\nparticles =\\n\",particles[:10])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "particles =\n",
+            " [[-4.92933e-01 -4.69448e-01 -2.22871e+00  2.33452e+00 -1.00000e+00]\n",
+            " [-3.80699e-01  8.59243e-01  1.25686e-01  9.58388e-01 -1.00000e+00]\n",
+            " [-2.34261e-01  9.33082e-01  1.29211e+00  1.61695e+00 -1.00000e+00]\n",
+            " [ 2.96567e+00 -1.14139e+01 -1.03999e+01  1.57235e+01 -1.00000e+00]\n",
+            " [-2.33088e-01  1.14639e+00  1.01423e+00  1.54828e+00  0.00000e+00]\n",
+            " [-2.24429e-01  6.11783e-01  5.36178e-01  8.43879e-01  0.00000e+00]\n",
+            " [-2.19645e-01  1.90731e+00  1.98366e+00  2.76061e+00  0.00000e+00]\n",
+            " [-9.46121e-02 -2.55988e-03 -1.57484e-01  1.83737e-01  0.00000e+00]\n",
+            " [-7.94387e-02 -1.19301e-01 -8.98585e-02  1.69168e-01  0.00000e+00]\n",
+            " [-2.82730e-02  2.31397e-01  3.13687e-01  3.90824e-01  0.00000e+00]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
