updated for hsf-india. Too long but ok for them to work through whole thing later. Make sure to discuss the end though!

--- a/activities/Lecture1-NN-keras.ipynb
+++ b/activities/Lecture1-NN-keras.ipynb
@@ -68,7 +68,7 @@
         "import tensorflow as tf\n",
         "import pylab as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,11 +83,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xTx3KTNYGyQu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "29df820a-c9c6-448c-adfa-20d422305fdd"
+        "id": "xTx3KTNYGyQu"
       },
       "source": [
         "# import data from github. Note: in colab, go to Files and refresh to see file\n",
@@ -98,35 +94,8 @@
         "# !mkdir data\n",
         "# !mv particle-events.npy data/particle-events.npy"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-12-18 04:18:42--  https://github.com/NuclearTalent/MachineLearningECT/blob/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy?raw=true\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://github.com/NuclearTalent/MachineLearningECT/raw/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy [following]\n",
-            "--2024-12-18 04:18:42--  https://github.com/NuclearTalent/MachineLearningECT/raw/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy\n",
-            "Reusing existing connection to github.com:443.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/NuclearTalent/MachineLearningECT/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy [following]\n",
-            "--2024-12-18 04:18:42--  https://raw.githubusercontent.com/NuclearTalent/MachineLearningECT/refs/heads/master/doc/pub/Day6/data/homogenous-16-particle-events-energy.npy\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 22986368 (22M) [application/octet-stream]\n",
-            "Saving to: ‘homogenous-16-particle-events-energy.npy?raw=true’\n",
-            "\n",
-            "homogenous-16-parti 100%[===================>]  21.92M  --.-KB/s    in 0.1s    \n",
-            "\n",
-            "2024-12-18 04:18:44 (201 MB/s) - ‘homogenous-16-particle-events-energy.npy?raw=true’ saved [22986368/22986368]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -137,7 +106,7 @@
         "# now we load the data file, which is a numpy array\n",
         "events = np.load(\"data/particle-events.npy\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +135,7 @@
         "\n",
         "# Use another call of reshape to combine all events to have the appropriate shape\n",
         "# Complete me:\n",
-        "particles =\n",
+        "\n",
         "\n",
         "#print(\"\\nparticles =\\n\",particles[:10])"
       ],
@@ -195,7 +164,10 @@
         "id": "ap3EizhuDk4B"
       },
       "source": [
-        "# Complete me:\n"
+        "# Complete me:\n",
+        "\n",
+        "\n",
+        "print(mass)"
       ],
       "execution_count": null,
       "outputs": []
@@ -206,7 +178,7 @@
         "id": "kprt9pbPDk4D"
       },
       "source": [
-        "There are several hundred thousand examples in this dataset which is overkill for this simple example. Create a subdataset with just 1000 examples that we will use for training."
+        "There are several hundred thousand examples in this dataset which is overkill for this simple example. Create a subdataset with just 1000 examples that we will use for training. We will start with *only* using the $(p_x,p_y,p_z,E)$ features, since we know that this is sufficient to predict invariant mass."
       ]
     },
     {
@@ -239,6 +211,8 @@
       },
       "source": [
         "plt.hist(mass_train,bins=100)\n",
+        "plt.xlabel(\"Invariant Mass (GeV)\")\n",
+        "plt.ylabel(\"Counts\")\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -250,7 +224,7 @@
         "id": "i-MXhgPQDk4H"
       },
       "source": [
-        "Now we can build and train the first neural network. We will start with a network with on hidden layer and 5 neurons, and ReLU activation.\n",
+        "Now we can build and train the first neural network. We will start with a network with one hidden layer that has 5 nodes, with a ReLU activation.\n",
         "\n",
         "\n"
       ]
@@ -263,7 +237,7 @@
       "source": [
         "# Build our model\n",
         "model = tf.keras.Sequential() #Define the model object\n",
-        "model.add(tf.keras.layers.Dense(5, input_shape=(5,), activation=\"relu\")) #Adds the hidden layer\n",
+        "model.add(tf.keras.layers.Dense(5, input_shape=(4,), activation=\"relu\")) #Adds the hidden layer\n",
         "\n",
         "# Add the output layer yourself\n",
         "# No activation function assignment defaults to \"linear\"\n",
@@ -283,7 +257,9 @@
         "id": "xFb0E6GtSK7Z"
       },
       "source": [
-        "To start, train for 30 epochs with a batch size of 128, an Adam optimizer with a learning rate of 0.1, using mean squared error loss. **This is not ideal.**\n",
+        "At this point, you should check that the number of trainable parameters is what you expect (you learned how to count this!).\n",
+        "\n",
+        "We begin by training for 30 epochs with a batch size of 128, an Adam optimizer with a learning rate of 0.1, using mean squared error loss. **This is not ideal.**\n",
         "\n",
         "Define your validation split to provide a set of data the model has not used to assess how the model is generalizing. This allows us to monitor overtraining. Setting `validation_split=0.2` meaning that $20\\%$ of the data will be used for validation.\n",
         "\n",
@@ -298,8 +274,7 @@
         "id": "hCp3EXCTDk4I"
       },
       "source": [
-        "tf.keras.backend.clear_session() # make sure old tensors/models are gone\n",
-        "optimize = tf.keras.optimizers.Adam(learning_rate=0.1) # Adam optimizer with a learning rate of 0.1\n",
+        "optimize = tf.keras.optimizers.Adam(learning_rate=0.001) # Adam optimizer with a learning rate of 0.1\n",
         "loss_func = tf.keras.losses.MeanSquaredError() # choosing MSE\n",
         "\n",
         "# compile model\n",
@@ -314,7 +289,7 @@
         "id": "Zs_ReONMDk4I"
       },
       "source": [
-        "results = model.fit(particles_train, mass_train, epochs=10, batch_size=256, validation_split=0.2)"
+        "results = model.fit(particles_train, mass_train, epochs=300, batch_size=128, validation_split=0.2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -361,6 +336,44 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "This loss curve should look pretty nice!\n",
+        "\n",
+        "Let's make predictions, and see if our model is working nicely. Although the goal is to generalize best to unseen data, which is minimizing the loss on the validation data, I like to get a feel for how good predictions are for a particular loss value. To do this, I will make predictions on the training data to see if we are in a reasonable place, learning-wise."
+      ],
+      "metadata": {
+        "id": "YhjB_g-SE_Ej"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yhat = model.predict(particles_train)\n",
+        "\n",
+        "plt.hist(yhat,bins=100,label=\"prediction\")\n",
+        "plt.hist(mass_train,bins=100,label=\"target\")\n",
+        "plt.xlabel(\"Invariant Mass (GeV)\")\n",
+        "plt.ylabel(\"Counts\")\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "2X274611DcID"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You should feel a bit sad. The predictions don't look great. But don't worry! I made this specific training a bit difficult so we can get practice tuning a model."
+      ],
+      "metadata": {
+        "id": "kUMczTvtGfHL"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Rot49hATDk4K"
       },
@@ -368,7 +381,7 @@
         "## Tuning\n",
         "The model is learning, but we can do better.\n",
         "\n",
-        "**At this point, you can play with the above code to change hyperparameters and note changes to your results.**\n",
+        "**At this point, you can play with the above code to change hyperparameters and note changes to your results.** Note that you need to redefine the `model` variable (i.e. re-execute the cell thayt builds the model) to entirely restart your training, rather than continue training.\n",
         "\n",
         "Alternatively, you can step through tuning this model below.\n",
         "\n",
@@ -445,7 +458,7 @@
         "id": "yh748SgrDk4O"
       },
       "source": [
-        "This is not really that much better, but now there is evidence of *overtraining* or *overfitting* -- the training loss is so much lower than the validation loss.\n",
+        "This is not really that much better, but now you may see evidence of *overtraining* or *overfitting* -- the validation loss begins increasing while the training loss is still decreasing.\n",
         "\n",
         "A common fix to this is adding *dropout layers*. Try adding a dropout layer with dropout rate of 0.5. <https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dropout>\n",
         "\n",
@@ -535,7 +548,7 @@
         "id": "t3lUeX2dDk4S"
       },
       "source": [
-        "Clearly, adding more layers helps improve the quality of the network. There is a limit to how effective this is though. Try having 5 hidden layers."
+        "Adding more layers may help improve the quality of the predictions with less training, as the model is more expressive."
       ]
     },
     {
@@ -595,7 +608,7 @@
         "id": "D-HNQQhpDk4V"
       },
       "source": [
-        "This difference in performance, especially with the sigmoid function, is known as the vanishing gradient problem. If the value for any one the neurons gets too far away from 0, the gradient for sigmoid and tanh gets really close to 0. This means that for deeper networks it is much more difficult to update the weights in the earlier layers as their gradient is so small. Now, remove the fifth column from the input data, the charge, and see what happens when training. Why do you think including charge has such a large impact?"
+        "This (likely) decrease in performance, especially with the sigmoid function, is known as the vanishing gradient problem. If the value for any one the neurons gets too far away from 0, the gradient for sigmoid and tanh gets really close to 0. This means that for deeper networks it is much more difficult to update the weights in the earlier layers as their gradient is so small. Now, remove the fifth column from the input data, the charge, and see what happens when training. Why do you think including charge has such a large impact?"
       ]
     },
     {
@@ -621,11 +634,23 @@
         "\n",
         "You can also try some other optimizers -- for example, sgd (with and without momentum), rmsprop, adagrad, adadelta, adamax, and nadam. <https://www.tensorflow.org/api_docs/python/tf/keras/optimizers>\n",
         "\n",
+        "### You should also trying including the charge information as an additonal feature. You should be able to get a better model more easily, even though charge was not used to compute invariant mass. *Why?*\n",
+        "\n",
         "Once you have your final model, you need to make predictions on examples that were not used for training or validation to determine your true performance on unseen data.\n",
         "\n",
         "Use `model.predict` for this.\n",
         "\n",
-        "You should find (expecially if you predict predictions vs ground truth), that your model isn't great. This is for more fundamental reasons. *What are they?*"
+        "## Next Steps\n",
+        "You should find (expecially if you predict predictions vs ground truth), that your model isn't great. This is for more fundamental reasons about our data. *What are they*?\n",
+        "\n",
+        "We can cast this more successfully as a **classification** problem. Think through the necessary changes to the following:\n",
+        " - data (specifically the targets)\n",
+        " - network architecture\n",
+        " - activation functions\n",
+        " - loss functions\n",
+        "\n",
+        "\n",
+        " Try making all of these changes and see if you can get a better model!"
       ]
     },
     {
