small language update

--- a/activities/Lecture2-CNN.ipynb
+++ b/activities/Lecture2-CNN.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "In this notebook, you will be training Convolutional Neural Networks (CNNs) for image classification tasks. We will walk through the technicalities of building a CNN with TensorFlow's high-level Keras API as well as some practical tips for training CNNs and evaluating their performace.\n",
         "\n",
-        "If you are using Google Colab, make sure you are using a GPU-enabled runtime. Go to \"Runtime\" $\\rightarrow$ \"Change runtime type\", then make sure \"GPU\" is selected for \"Hardware accelerator\"."
+        "If you are using Google Colab, make sure you are using a GPU or TPU-enabled runtime. Go to \"Runtime\" $\\rightarrow$ \"Change runtime type\", then make sure \"GPU\" is selected for \"Hardware accelerator\"."
       ]
     },
     {
